--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,11 +5,12 @@ code, pre {
 	font-family: Monaco, Consolas
 }
 body {
-	padding: 50px;
+	padding: 20px;
 }
 
-
-
+h2 {
+	font-size: 20px;
+}
 
 
 a {
@@ -32,8 +33,27 @@ img {
 #editor { 
     width: 45%;
     height: 40em;
+    min-width: 350px;
 }
 
 .thumbnail .brief {
 	height: 8em;
+}
+
+#sidebar {
+	float:left;
+	width: 200px;
+	background-color: rgba(239,247,252,0.3);
+}
+
+
+#sidebar-controls a {
+	width: 60px;
+	text-align: center;
+	vertical-align: baseline;
+}
+
+#sidebar footer {
+	bottom: 0;
+	position: absolute;
 }
