Add app name and a default page title.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html(lang="zhCN")
 	head
-		title= title
+		title 在线课堂
 
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
