--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -34,7 +34,7 @@ block content
 					a(data-target="console") 控制台
 			.tab-content
 				.tab-pane.fade.active.in#console
-					pre >gcc helloworld.c
+					pre >
 	script(type="text/javascript", src="/javascripts/lib/ace.js")
 	script(type="text/javascript", src="/javascripts/lib/ext-modelist.js")
 	script(type='text/javascript').
