--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -26,7 +26,7 @@ block content
 				//-#editor-buffer-01.tab-pane.fade.active.in
 				//-	.editor #include &lt;stdlib.h&gt;
 			// button.btn.btn-default#compile 编译
-			button.btn.btn-primary#run 运行
+			button.btn.btn-primary#run 编译运行
 
 	section#output-panels
 			ul.nav.nav-tabs
@@ -48,6 +48,7 @@ block content
 		$('#titles :first-child').addClass('active')
 
 		// editors
+		var current = 0 // current editor index
 		var files = exercises[0].files
 		for (var i=0;i <files.length; i++){
 			var file = files[i]
@@ -58,10 +59,13 @@ block content
 				"<div id=\""+id+"\" class=\"tab-pane fade\"><div class=\"editor\">"+file.initial_value+"</div></div>"
 			)
 		}
-		console.log(sources)
+
 		$('#editor-tabs :first-child').addClass('active')
 		$('#editor-buffers :first-child').addClass('active in')
-		$(".nav-tabs a").click(function(e) {$(this).tab('show')})
+		$(".nav-tabs a").click(function(e) {
+			$(this).tab('show');
+			current = $(this).attr('data-target').match(/\d+/);
+		})
 		var editors = []
 		$(".editor").each(function(index) {
 			var editor = ace.edit(this);
@@ -75,6 +79,8 @@ block content
 
 		$('#run').click(function()
 		{
+			console.log(current)
+			editors[current].focus();
 			for (var i = 0; i < sources.length; i++) {
 				sources[i].content = editors[i].getSession().getValue()
 			}
