--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,13 +53,23 @@ h2 { font-size: 20px;}
 {
 	height: 300px;
 	background-color: black;
-	overflow:scroll;
+	overflow:auto;
 }
 
 #console pre {
 	border-style: none;
 	font-family: Monaco;
 	background-color: black;
-	color: gray;
+	color: gray
 	font-weight: bold;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+}
+
+
+#console pre.active {
+	border-radius: 0px;
+	border-top: 1px solid gray;
+	color: white;
 }
