--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -21,18 +21,19 @@ block content
 		#output-panels
 			ul.nav.nav-tabs
 				li.active
-					a(data-target="console") 控制台
+					a(data-target="terminal") 控制台
 			.tab-content
-				.tab-pane.fade.active.in#console
-					pre
+				.tab-pane.fade.active.in#terminal
 	link(rel='stylesheet', href='/javascripts/codemirror/lib/codemirror.css', media="all")
 	link(rel='stylesheet', href='/javascripts/codemirror/theme/solarized.css', media="all")
 	script(type="text/javascript", src="/javascripts/codemirror/lib/codemirror.js")
 	script(type="text/javascript", src="/javascripts/codemirror/addon/mode/loadmode.js")
+	script(type="text/javascript", src="/javascripts/codemirror/addon/search/searchcursor.js")
 	script(type="text/javascript", src="/javascripts/codemirror/mode/meta.js")
-	script(type="text/javascript", src="/javascripts/jstween-1.1.min.js")
+	script(type="text/javascript", src="/javascripts/jquery-ui-1.10.3.custom.min.js")
 	script(type='text/javascript').
 		var exercises = JSON.parse( !{JSON.stringify(exedb)} );
+		var exercise = exercises[2]
 		var mimelookup = {
 			".c":"text/x-csrc",
 			".h":"text/x-csrc",
@@ -68,15 +69,71 @@ block content
 		}
 
 
+		function setupPlaceholders(e) {
+			var pattern = /\/\*\/\/[^*]*?\/\/\*\//;
+			var editor = e;
+
+			if (editor.getOption("readOnly"))
+				return;
+
+			
+			function createPlaceholderElement(e) {
+					var span = document.createElement("span");
+					span.appendChild(document.createTextNode("(" + e.replace("/*//", "").replace("//*/", "") + ")"))
+					span.className = "CodeMirror-autoplace"
+					return span
+			}
+
+			function createPlaceholder(e, cursor) {
+					if (e.findMarksAt(cursor.from()).length)
+						return;
+
+					var elt = createPlaceholderElement(e.getRange(cursor.from(), cursor.to()))
+					var tm = e.markText(cursor.from(), cursor.to(), {replacedWith: elt, clearOnEnter: true, lastRange:{}})
+
+					CodeMirror.on(elt, "mousedown", function () {tm.clear()})
+
+					function unhide() {
+						var r = e.getRange(tm.lastRange.from, tm.lastRange.to)
+						if (r.match(pattern) === null) {
+							e.replaceRange("", tm.lastRange.from, {line: tm.lastRange.to.line, ch: tm.lastRange.to.ch - 1})
+						}
+						else {
+							e.replaceRange("", tm.lastRange.from, tm.lastRange.to)
+						}
+						e.focus();
+						e.setCursor(tm.lastRange.from);
+					}
+					CodeMirror.on(tm, "unhide", unhide)
+					CodeMirror.on(tm, "clear", function(from, to){
+						tm.lastRange.from = from;
+						tm.lastRange.to = to;
+						unhide();
+					})
+			}
+			var cursor = editor.getSearchCursor(pattern)
+			while (cursor.findNext())
+				createPlaceholder(editor, cursor);
+
+			editor.on("change", function (editor) {
+					var n = [];
+					var cursor = editor.getSearchCursor(pattern);
+					while (cursor.findNext())
+						n.push(createPlaceholder(editor, cursor));
+					return n;
+			})
+		}
+
+
 		var sources = []
 		// 
 		$('#instructions')
-			.append('<h1>'+exercises[0].title+'</h1>')
-			.append(exercises[0].instructions)
+			.append('<h1>'+exercise.title+'</h1>')
+			.append(exercise.instructions)
 
 		// editors
 		var current = 0 // current editor index
-		var files = exercises[0].files
+		var files = exercise.files
 		for (var i=0;i <files.length; i++){
 			var file = files[i]
 			var id = "editor-buffer-"+i
@@ -97,35 +154,36 @@ block content
 		CodeMirror.modeURL = "/javascripts/codemirror/mode/%N/%N.js";
 		$(".editor").each(function(index){
 			var editor = CodeMirror.fromTextArea(this, {lineNumbers:true, theme:"solarized dark"});
+
 			var mi = getMode(files[index].name);
 			if (mi){
 				CodeMirror.autoLoadMode(editor, mi.mode);
 				editor.setOption('mode', mi.mime);
 			}
+			setupPlaceholders(editor);
 			editors.push(editor);
 		});
 
-
-		(function($){
-			$.fn.typeWrite=function(s){
-				var o={content:$(this).text(),delay:5,t:this,i:0};
-				if(s){
-					$.extend(o,s);
-				}
-				o.t.text('');
-				var i=setInterval(function() {
-						o.t.text(o.t.text()+o.content.charAt(o.i++));
-						if(o.i==o.content.length){
-							clearInterval(i);
-						}
-				} ,o.delay);
-				return o.t;  
-			};
-		})(jQuery);
 		var posted = false;
 		$('#commit').click(function(){
 			if (posted)
 				return;
+
+			// check if all widget have been filled.
+			$(".CodeMirror-widget").each(function(index){
+				$(this)
+					.addClass('hilight', 100)
+					.removeClass('hilight', 100)
+					.addClass('hilight', 100)
+					.removeClass('hilight', 100)
+					.addClass('hilight', 100)
+					.removeClass('hilight', 100)
+						;
+			})
+			
+			if ($(".CodeMirror-widget").length > 0)
+				return;
+
 			posted = true;
 
 			for (var i = 0; i < editors.length; i++)
@@ -133,20 +191,22 @@ block content
 				sources[i].content = editors[i].getDoc().getValue()
 			}
 
+			var lastTop = 0
 			$.post('/build', {sources:sources}, function(res){
-				$('#console pre:last-child').removeClass('active').tween({
-					color:{
-						start: '#FFFFFF',
-						stop: '#7F7F7F',
-						time: 0,
-						duration: 0.25,
-						effect: 'easeInOut'
-					}
-				});
-				$.play();
-
-				$('#console').append('<pre class="active"></pre>');
-				$('#console pre:last-child').typeWrite({content:res.outputs})
-				posted = false;
+				var terminal = $('#terminal')
+				function appendConsole() {
+					var lines = res.outputs.split(/\r\n|\r|\n/).length
+					terminal.append('<pre class="active black" data-lines="'+lines+'">'+res.outputs+'</pre>');
+					var s = terminal.prop("scrollHeight") - terminal.height()
+					terminal.animate({ scrollTop: s}, 300, function(){
+						terminal.children('pre:last-child').removeClass('black', 100);
+						posted = false;
+					});
+				}
+				var last = terminal.children('pre:last-child')
+				if (last.length > 0)
+					last.removeClass('active', last.data('lines')*100, appendConsole);
+				else
+					appendConsole();
 			});
 		});
