--- a/public/javascripts/codemirror/theme/solarized.css
+++ b/public/javascripts/codemirror/theme/solarized.css
@@ -94,10 +94,14 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
   text-decoration-style: dotted;
 }
 .cm-s-solarized .cm-strong { color: #eee; }
+
+/*visualize tab character*/
+/*
 .cm-s-solarized .cm-tab:before {
-  content: "➤";   /*visualize tab character*/
+  content: "➤";   
   color: #586e75;
 }
+*/
 
 .cm-s-solarized.cm-s-dark .CodeMirror-selected {
   background: #073642;
