--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -62,6 +62,7 @@ block content
 	script(type="text/javascript", src="/javascripts/codemirror/addon/search/searchcursor.js")
 	script(type="text/javascript", src="/javascripts/codemirror/mode/meta.js")
 	script(type="text/javascript", src="/javascripts/jquery-ui-1.10.3.custom.min.js")
+	script(type="text/javascript", src="/javascripts/jquery.mustache.js")
 	script(type="text/javascript", src="/javascripts/course.js")
 	script(type='text/javascript').
 		Course(!{exedb})
