--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -9,6 +9,11 @@ block content
 		#editor-panels
 				ul#editor-tabs.nav.nav-tabs
 				#editor-buffers.tab-content
+				.editor-statusbar
+					span.glyphicon.glyphicon-play
+					span.glyphicon.glyphicon-cog.pull-right
+					span.pull-right C
+					span.pull-right Tab: 4
 
 		#exercise-links.btn-toolbar
 			.btn-group
