--- a/views/lessons.jade
+++ b/views/lessons.jade
@@ -10,7 +10,7 @@ block content
 				ul#editor-tabs.nav.nav-tabs
 				#editor-buffers.tab-content
 				.editor-statusbar
-					span.glyphicon.glyphicon-play
+					span.glyphicon.glyphicon-play.pull-left
 					span.glyphicon.glyphicon-cog.pull-right
 					span.pull-right C
 					span.pull-right Tab: 4
